<resources>
    <string name="app_name">Двачан</string>
    <string name="thematics">Тематика</string>
    <string name="art">Творчество</string>
    <string name="news">Политика</string>
    <string name="it">Техника и софт</string>
    <string name="games">Игры</string>
    <string name="japanese">Японская культура</string>
    <string name="sundry">Разное</string>
    <string name="adult">Взрослым</string>
    <string name="users">Кастом</string>

    <string name="threads">Треды</string>
    <string name="posts">posts</string>
    <string name="search">Search</string>
    <string name="makepost">Запостить</string>
    <string name="username">Имя пользователя</string>
    <string name="comment">Текст</string>
    <string name="captch_answ">Введите код с картинки</string>
    <string name="passcode">passcode</string>
    <string name="enter_passcode">Введите пасскод</string>
    <string name="parent">>></string>
    <string name="zero">0</string>
    <string name="internet_warning">Беды с интернетом</string>
    <string name="history">История</string>
    <string name="favourites">Избранное</string>
    <string name="boards">Борды</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="add_fav">Добаить в избранное</string>
    <string name="remove_fav">Удалить из избранного</string>
    <string name="add_post">Сделать пост</string>
    <string name="empty">Здесь ничего нет</string>
    <string name="download">Скачать все медиа</string>
    <string name="diez">#</string>
    <string name="help_project">Поддержать проект</string>
    <string name="webm">webm</string>
    <string name="mp4">mp4</string>
    <string name="watch_ad">Посмотреть рекламу</string>
    <string name="gallery">Галерея</string>
    <string name="answers">%s ответов</string>
    <string name="copy_url">Скопировать ссылку</string>
    <string name="help_ad">Поддержать проект вы можете просмотрев рекламу, кликнув по кнопке ниже.</string>
    <string name="help_thx">Свои пожелания проекту отправляйте на почту alexey.solovev43@gmail.com\n(нажмите чтобы скопировать)</string>
    <string name="card_copied">Номер карты скопирован в буфер обмена</string>
    <string name="mail_copied">Скопировано в буфер обмена</string>
    <string name="card">4890494631222460</string>
    <string name="mail">alexey.solovev43@gmail.com</string>
    <string name="add_thread">Добавить тред</string>
    <string name="show_captcha">Нажмите чтобы загрузить капчу</string>
    <string name="success_captcha">Вы прошли капчу</string>
    <style name="default_theme">Светллая тема</style>
    <style name="dark_theme">Темная тема</style>
</resources>
