<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:id="@+id/first_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_boards"
            android:title="@string/boards"
            android:icon="@drawable/ic_boards"/>
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favourite"
            android:title="@string/favourites" />


        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />


    </group>

    <group
        android:id="@+id/second_group"
        android:checkableBehavior="single">


        <item
            android:id="@+id/help_project"
            android:icon="@drawable/ic_help"
            android:title="@string/help_project" />

    </group>
</menu>