<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/opt_scroll_down"
        android:title="scroll down"
        app:showAsAction="always"
        android:icon="@drawable/ic_bottom"/>

    <item
        android:id="@+id/opt_scroll_up"
        android:title="scroll up"
        app:showAsAction="always"
        android:icon="@drawable/ic_upward"/>


    <item
        android:id="@+id/opt_addFavourites"
        android:title="@string/add_fav"
        app:showAsAction="never" />

    <item
        android:id="@+id/opt_removeFavourites"
        android:title="@string/remove_fav"
        app:showAsAction="never" />

    <item
        android:id="@+id/opt_addPost"
        app:showAsAction="never"
        android:title="@string/add_post"/>
</menu>