<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.a2ch.ui.make_post.SendPostViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:padding="16dp"
        tools:context=".ui.make_post.MakePostActivity">

        <Button
            android:background="@null"
            android:onClick="@{viewmodel::makePost}"
            android:id="@+id/b_make_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/makepost"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="2dp"
            android:background="@null"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/comment"
            android:inputType="textPersonName"
            android:text="@={viewmodel.comment}"
            app:layout_constraintBottom_toTopOf="@+id/captcha_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <EditText
            android:background="@null"
            android:id="@+id/editText2"
            android:text="@={viewmodel.username}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:onClick="@{viewmodel::loadCaptchaImage}"
            android:id="@+id/captcha_img"
            android:layout_width="0dp"
            android:scaleType="centerCrop"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/b_make_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/captch_answ"
            android:inputType="textPersonName"
            android:text="@={viewmodel.captchaAnswer}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/captcha_img" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>