<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="viewmodel"
            type="com.example.a2ch.ui.boards.BoardsViewModel" />
    </data>

    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:rowCount="3"
        android:columnCount="3"
        android:padding="16dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.boards.BoardsFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{(view) -> viewmodel.startActivity(@string/thematics)}"
            android:layout_rowWeight="1"
            app:cardCornerRadius="8dp"
            android:background="?attr/selectableItemBackground"
            android:layout_columnWeight="1"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp">


            <RelativeLayout
                android:background="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_above="@id/one"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/thematics"
                    android:id="@+id/one"
                    android:textColor="#000"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center"
                    android:layout_marginBottom="16dp"
                    android:layout_centerHorizontal="true"
                  android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            app:cardCornerRadius="8dp"
            android:background="?attr/selectableItemBackground"
            android:layout_height="0dp"
            android:onClick="@{(view) -> viewmodel.startActivity(@string/art)}"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp">


            <RelativeLayout
                android:background="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_above="@id/two"
                    android:layout_centerHorizontal="true"

                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id='@+id/two'
                    android:text="@string/art"
                    android:textColor="#000"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center"
                    android:layout_marginBottom="16dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="8dp"
            android:onClick="@{(view) -> viewmodel.startActivity(@string/news)}"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="?attr/selectableItemBackground"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp">


            <RelativeLayout
                android:background="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_above="@id/three"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/three"
                    android:text="@string/news"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:layout_marginBottom="16dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardCornerRadius="8dp"
            android:onClick="@{(view) -> viewmodel.startActivity(@string/it)}"
            android:background="?attr/selectableItemBackground"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp">


            <RelativeLayout
                android:background="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_above="@id/four"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/four"
                    android:text="@string/it"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:layout_marginBottom="16dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="16dp"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            app:cardCornerRadius="8dp"
            android:onClick="@{(view) -> viewmodel.startActivity(@string/games)}"
            android:background="?attr/selectableItemBackground"
            android:layout_columnWeight="1"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp">


            <RelativeLayout
                android:background="?attr/selectableItemBackground"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_above="@id/five"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/five"
                    android:text="@string/games"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:layout_marginBottom="16dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:onClick="@{(view) -> viewmodel.startActivity(@string/japanese)}"
            android:layout_columnWeight="1"
            app:cardCornerRadius="8dp"
            android:background="?attr/selectableItemBackground"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp">


            <RelativeLayout
                android:background="?attr/selectableItemBackground"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_above="@id/six"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/six"
                    android:text="@string/japanese"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:layout_marginBottom="16dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardCornerRadius="8dp"
            android:onClick="@{(view) -> viewmodel.startActivity(@string/sundry)}"
            android:background="?attr/selectableItemBackground"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp">


            <RelativeLayout
                android:background="?attr/selectableItemBackground"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_above="@id/seven"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/seven"
                    android:text="@string/sundry"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:layout_marginBottom="16dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:onClick="@{(view) -> viewmodel.startActivity(@string/adult)}"
            android:layout_columnWeight="1"
            app:cardCornerRadius="8dp"
            android:background="?attr/selectableItemBackground"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp">


            <RelativeLayout
                android:background="?attr/selectableItemBackground"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_above="@id/eight"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/adult"
                    android:id="@+id/eight"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:layout_marginBottom="16dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="@{(view) -> viewmodel.startActivity(@string/users)}"
            app:cardCornerRadius="8dp"
            android:background="?attr/selectableItemBackground"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp">


            <RelativeLayout
                android:background="?attr/selectableItemBackground"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_above="@id/nine"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/nine"
                    android:text="@string/users"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:layout_marginBottom="16dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>
</layout>
